# efm32pg1b-pac

./: CHANGELOG.md  Cargo.toml  EFM32PG1B.svd  README.md  regenerate.sh  svd2rust.toml
src/: acmp0.rs  acmp1.rs  adc0.rs  cmu.rs  cryotimer.rs  crypto.rs  di.rs  emu.rs  fpueh.rs  generic.rs  gpcrc.rs  gpio.rs  i2c0.rs  idac0.rs  ldma.rs  letimer0.rs  leuart0.rs  lib.rs  msc.rs  pcnt0.rs  prs.rs  rmu.rs  rtcc.rs  timer0.rs  timer1.rs  usart0.rs  usart1.rs  wdog0.rs
src/acmp0/: aportconflict.rs  aportreq.rs  ctrl.rs  hysteresis0.rs  hysteresis1.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  inputsel.rs  routeloc0.rs  routepen.rs  status.rs
src/acmp1/: aportconflict.rs  aportreq.rs  ctrl.rs  hysteresis0.rs  hysteresis1.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  inputsel.rs  routeloc0.rs  routepen.rs  status.rs
src/adc0/: aportconflict.rs  aportmasterdis.rs  aportreq.rs  biasprog.rs  cal.rs  cmd.rs  cmpthr.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  scanctrl.rs  scanctrlx.rs  scandata.rs  scandatap.rs  scandatax.rs  scandataxp.rs  scanfifoclear.rs  scanfifocount.rs  scaninputsel.rs  scanmask.rs  scannegsel.rs  singlectrl.rs  singlectrlx.rs  singledata.rs  singledatap.rs  singlefifoclear.rs  singlefifocount.rs  status.rs
src/cmu/: adcctrl.rs  auxhfrcoctrl.rs  calcnt.rs  calctrl.rs  cmd.rs  ctrl.rs  dbgclksel.rs  hfbusclken0.rs  hfclksel.rs  hfclkstatus.rs  hfcorepresc.rs  hfexppresc.rs  hfperclken0.rs  hfperpresc.rs  hfpresc.rs  hfrcoctrl.rs  hfxoctrl.rs  hfxoctrl1.rs  hfxostartupctrl.rs  hfxosteadystatectrl.rs  hfxotimeoutctrl.rs  hfxotrimstatus.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  lfaclken0.rs  lfaclksel.rs  lfapresc0.rs  lfbclken0.rs  lfbclksel.rs  lfbpresc0.rs  lfeclken0.rs  lfeclksel.rs  lfepresc0.rs  lfrcoctrl.rs  lfxoctrl.rs  lock.rs  oscencmd.rs  pcntctrl.rs  (+5 more)
src/cryotimer/: cnt.rs  ctrl.rs  em4wuen.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  periodsel.rs
src/crypto/: cmd.rs  cstatus.rs  ctrl.rs  data0.rs  data0byte.rs  data0byte12.rs  data0byte13.rs  data0byte14.rs  data0byte15.rs  data0xor.rs  data0xorbyte.rs  data1.rs  data1byte.rs  data2.rs  data3.rs  ddata0.rs  ddata0big.rs  ddata0byte.rs  ddata0byte32.rs  ddata1.rs  ddata1byte.rs  ddata2.rs  ddata3.rs  ddata4.rs  dstatus.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  key.rs  keybuf.rs  qdata0.rs  qdata0byte.rs  qdata1.rs  qdata1big.rs  qdata1byte.rs  seq0.rs  seq1.rs  seq2.rs  seq3.rs  (+5 more)
src/emu/: biasconf.rs  biastestctrl.rs  cmd.rs  ctrl.rs  dcdcclimctrl.rs  dcdcctrl.rs  dcdclncompctrl.rs  dcdclnfreqctrl.rs  dcdclnvctrl.rs  dcdclpctrl.rs  dcdclpvctrl.rs  dcdcmiscctrl.rs  dcdcsync.rs  dcdctiming.rs  dcdczdetctrl.rs  em4ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  lock.rs  pwrcfg.rs  pwrctrl.rs  temp.rs  (+9 more)
(+501 files in other folders)
