[package]
name = "efm32pg1b-pac"
version = "0.2.0"
edition = "2021"
authors = ["Bogdan Olar <olar.bogdan.dev@gmail.com>"]
description = "Peripheral access API for Silicon Labs EFM32PG1B microcontrollers"
keywords = ["pac", "arm", "cortex-m", "efm32", "efm32pg1b", "svd2rust"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/BogdanOlar/efm32pg1b-pac"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.3", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]
