[package]
name = "efm32pg1b-pac"
version = "0.4.4"
edition = "2021"
authors = ["Bogdan Olar <olar.bogdan.dev@gmail.com>"]
description = "Peripheral access API for Silicon Labs EFM32PG1B microcontrollers"
keywords = ["pac", "arm", "cortex-m", "efm32pg1b", "svd2rust"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/BogdanOlar/efm32pg1b-pac"

[dependencies]
critical-section = { version = "1.1", optional = true }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", optional = true }
defmt = { version = "1.0", optional = true }
vcell = "0.1"
portable-atomic = { version = "1.13", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ['critical-section', 'rt']
default-target = "thumbv7m-none-eabi"
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
